v0.10.0/_sources/generated/statsmodels.gam.generalized_additive_model.GLMGamResults.rst.txt
statsmodels.gam.generalized\_additive\_model.GLMGamResults
==========================================================

.. currentmodule:: statsmodels.gam.generalized_additive_model

.. autoclass:: GLMGamResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GLMGamResults.aic
         GLMGamResults.bic
         GLMGamResults.bse
         GLMGamResults.conf_int
         GLMGamResults.cov_params
         GLMGamResults.cv
         GLMGamResults.deviance
         GLMGamResults.edf
         GLMGamResults.f_test
         GLMGamResults.fittedvalues
         GLMGamResults.gcv
         GLMGamResults.get_hat_matrix_diag
         GLMGamResults.get_influence
         GLMGamResults.get_prediction
         GLMGamResults.hat_matrix_diag
         GLMGamResults.hat_matrix_trace
         GLMGamResults.initialize
         GLMGamResults.llf
         GLMGamResults.llnull
         GLMGamResults.load
         GLMGamResults.mu
         GLMGamResults.normalized_cov_params
         GLMGamResults.null
         GLMGamResults.null_deviance
         GLMGamResults.partial_values
         GLMGamResults.pearson_chi2
         GLMGamResults.plot_added_variable
         GLMGamResults.plot_ceres_residuals
         GLMGamResults.plot_partial
         GLMGamResults.plot_partial_residuals
         GLMGamResults.predict
         GLMGamResults.pvalues
         GLMGamResults.remove_data
         GLMGamResults.resid_anscombe
         GLMGamResults.resid_anscombe_scaled
         GLMGamResults.resid_anscombe_unscaled
         GLMGamResults.resid_deviance
         GLMGamResults.resid_pearson
         GLMGamResults.resid_response
         GLMGamResults.resid_working
         GLMGamResults.save
         GLMGamResults.summary
         GLMGamResults.summary2
         GLMGamResults.t_test
         GLMGamResults.t_test_pairwise
         GLMGamResults.test_significance
         GLMGamResults.tvalues
         GLMGamResults.wald_test
         GLMGamResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GLMGamResults.use_t

