v0.13.5/_sources/generated/statsmodels.gam.generalized_additive_model.GLMGamResults.rst.txt
statsmodels.gam.generalized\_additive\_model.GLMGamResults
==========================================================

.. currentmodule:: statsmodels.gam.generalized_additive_model

.. autoclass:: GLMGamResults
   :exclude-members: conf_int,cov_params,f_test,get_hat_matrix_diag,get_influence,get_prediction,info_criteria,initialize,llf_scaled,load,normalized_cov_params,partial_values,plot_added_variable,plot_ceres_residuals,plot_partial,plot_partial_residuals,predict,pseudo_rsquared,remove_data,save,summary,summary2,t_test,t_test_pairwise,test_significance,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GLMGamResults.conf_int
      ~GLMGamResults.cov_params
      ~GLMGamResults.f_test
      ~GLMGamResults.get_hat_matrix_diag
      ~GLMGamResults.get_influence
      ~GLMGamResults.get_prediction
      ~GLMGamResults.info_criteria
      ~GLMGamResults.initialize
      ~GLMGamResults.llf_scaled
      ~GLMGamResults.load
      ~GLMGamResults.normalized_cov_params
      ~GLMGamResults.partial_values
      ~GLMGamResults.plot_added_variable
      ~GLMGamResults.plot_ceres_residuals
      ~GLMGamResults.plot_partial
      ~GLMGamResults.plot_partial_residuals
      ~GLMGamResults.predict
      ~GLMGamResults.pseudo_rsquared
      ~GLMGamResults.remove_data
      ~GLMGamResults.save
      ~GLMGamResults.summary
      ~GLMGamResults.summary2
      ~GLMGamResults.t_test
      ~GLMGamResults.t_test_pairwise
      ~GLMGamResults.test_significance
      ~GLMGamResults.wald_test
      ~GLMGamResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GLMGamResults.aic
      ~GLMGamResults.bic
      ~GLMGamResults.bic_deviance
      ~GLMGamResults.bic_llf
      ~GLMGamResults.bse
      ~GLMGamResults.cv
      ~GLMGamResults.deviance
      ~GLMGamResults.edf
      ~GLMGamResults.fittedvalues
      ~GLMGamResults.gcv
      ~GLMGamResults.hat_matrix_diag
      ~GLMGamResults.hat_matrix_trace
      ~GLMGamResults.llf
      ~GLMGamResults.llnull
      ~GLMGamResults.mu
      ~GLMGamResults.null
      ~GLMGamResults.null_deviance
      ~GLMGamResults.pearson_chi2
      ~GLMGamResults.pvalues
      ~GLMGamResults.resid_anscombe
      ~GLMGamResults.resid_anscombe_scaled
      ~GLMGamResults.resid_anscombe_unscaled
      ~GLMGamResults.resid_deviance
      ~GLMGamResults.resid_pearson
      ~GLMGamResults.resid_response
      ~GLMGamResults.resid_working
      ~GLMGamResults.tvalues
      ~GLMGamResults.use_t
   
   
   